k3s/02-postgis.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgis
  namespace: sippolusi
spec:
  selector:
    app: postgis
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgis
  namespace: sippolusi
spec:
  serviceName: "postgis"
  replicas: 1
  selector:
    matchLabels:
      app: postgis
  template:
    metadata:
      labels:
        app: postgis
    spec:
      containers:
      - name: postgis
        image: postgis/postgis:16-3.4
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgis-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
