k3s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sippolusi-gateway
  namespace: sippolusi
  annotations:
    # Use traefik as it comes by default with K3s
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /v1/routes
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
      # You can add other paths here for route_model and spatial_model once implemented
